contrast fixed

--- a/lesson2/css/style.css
+++ b/lesson2/css/style.css
@@ -19,6 +19,7 @@ section h3 a:link {
     color: white;
 }
 
+
 section h3 a:hover {
     color: black;
 }
@@ -31,12 +32,11 @@ section img {
 }
 section p{
     padding: 15px;
-    text-align: justify;
     line-height: 20pt;
 }
 
 section {
-    background-color: gray;
+    background-color: #707070;
     border-style: solid;
     border-width: 1px;
     border-color: black;
@@ -47,10 +47,9 @@ section {
 }
 
 footer, header {
-    background-color: gray;
+    background-color: #707070;
     border-radius: 5px;
     color: #ffffff;
-    margin: none;
     padding: 15px;
     text-align: center;
     width: 100%;
